--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,135 @@
+alembic==1.14.0
+annotated-types==0.7.0
+ansible-base==2.10.8
+anyio==4.8.0
+apache-libcloud==3.2.0
+argcomplete==1.8.1
+asgiref==3.8.1
+attrs==21.2.0
+Automat==20.2.0
+Babel==2.8.0
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+blinker==1.8.2
+certifi==2020.6.20
+chardet==4.0.0
+cliapp==1.20180812.1
+click==8.1.7
+cloud-init==24.4
+cmdtest==0.32+git
+colorama==0.4.4
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==3.4.8
+dbus-python==1.2.18
+distlib==0.3.9
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+Django==5.0.7
+dnspython==2.1.0
+exceptiongroup==1.2.2
+fastapi==0.115.8
+filelock==3.17.0
 Flask==3.0.3
-requests==2.26.0
-flask
-flask-cors
-
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SocketIO==5.4.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+gpg==1.16.0
+greenlet==1.1.2
+gunicorn==20.1.0
+gyp==0.1
+h11==0.14.0
+httplib2==0.20.2
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==4.6.4
+incremental==21.3.0
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.4
+jmespath==0.10.0
+joblib==1.4.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+Mako==1.3.8
+Markdown==3.3.6
+MarkupSafe==2.1.5
+more-itertools==8.10.0
+msgpack==1.0.3
+netaddr==0.8.0
+netifaces==0.11.0
+nltk==3.9.1
+ntlm-auth==1.4.0
+oauthlib==3.2.0
+packaging==21.3
+pillow==11.1.0
+platformdirs==4.3.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycryptodomex==3.11.0
+pycurl==7.44.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pygame==2.6.0
+Pygments==2.11.2
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+PyJWT==2.3.0
+pykerberos==1.1.14
+pynvim==0.4.2
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.4.0+ubuntu4
+python-engineio==4.10.1
+python-socketio==5.11.4
+pytz==2022.1
+pywinrm==0.3.0
+PyYAML==5.4.1
+regex==2024.11.6
+requests==2.25.1
+requests-kerberos==0.12.0
+requests-ntlm==1.1.0
+requests-toolbelt==0.9.1
+SecretStorage==3.3.1
+selinux==3.3
+service-identity==18.1.0
+simple-websocket==1.1.0
+simplejson==3.17.6
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+sqlparse==0.5.1
+ssh-import-id==5.11
+starlette==0.45.3
+systemd-python==234
+tqdm==4.67.1
+ttystatus==0.38
+Twisted==22.1.0
+typing_extensions==4.12.2
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+uvicorn==0.34.0
+virtualenv==20.29.1
+wadllib==1.3.6
+Werkzeug==3.0.3
+wsproto==1.2.0
+WTForms==3.2.1
+xmltodict==0.12.0
+zipp==1.0.0
+zope.interface==5.4.0
